# agent_scraper

./: .gitignore  README.md  auto_test.py  hg——download.py  pyproject.toml  run.py  run_server.py
agent_scraper/: __init__.py  extractor.py  formatter.py  models.py  navigator.py  orchestrator.py  page_iterator.py  rule_discoverer.py  task_parser.py
autoscraper/: auto_scraper.py
docs/: architecture.md  design.md  development.md  user-guide.md
src/agent_scraper/: __init__.py
src/agent_scraper/browser/: navigator.py  page_iterator.py
src/agent_scraper/core/: __init__.py  llm.py  models.py
src/agent_scraper/extraction/: extractor.py  formatter.py  rule_discoverer.py
src/agent_scraper/pipeline/: orchestrator.py  task_parser.py
src/autoscraper/: auto_scraper.py
src/server/: app.py  task_manager.py
tests/: conftest.py  test_auto_scraper.py  test_autoscraper_utils.py  test_extractor.py  test_formatter.py  test_models.py  test_navigator.py  test_orchestrator.py  test_orchestrator_events.py  test_page_iterator.py  test_rule_discoverer.py  test_server_app.py  test_task_manager.py  test_task_parser.py
web/: index.html  tsconfig.tsbuildinfo
web/src/: App.css  App.tsx  types.ts
web/src/components/: ChatArea.tsx  InputBar.tsx  MessageBubble.tsx  ResultTable.tsx
web/src/hooks/: useWebSocket.ts
